# network_automation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sites.yml
inventory/: sites.yml
inventory/DCAMER/: hosts.yml
inventory/sites/: sites.yml
inventory/sites/DCAMER/: hosts.yml
inventory/sites/DCEMEA/: hosts.yml
inventory/sites/EQ4LON/: hosts.yml
netbox/: __main__.py  addressing.py  cli.py  client.py  constants.py  inventory.py  provision_site.py  reconcile.py  resources.py
network_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_addressing.py
